--- a/SecondKadaiApp/Base.lproj/Main.storyboard
+++ b/SecondKadaiApp/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,99 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SecondKadaiApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名前を入力してください" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xI5-ph-dCg">
+                                <rect key="frame" x="100" y="257" width="214" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="あ" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aPS-WO-Da8">
+                                <rect key="frame" x="100" y="326" width="214" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4KC-gg-vTw">
+                                <rect key="frame" x="100" y="438" width="214" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="JhZ-4M-1lh" kind="show" id="u3K-rc-sFF"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="4KC-gg-vTw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="0Sb-37-Jcs"/>
+                            <constraint firstItem="4KC-gg-vTw" firstAttribute="centerX" secondItem="xI5-ph-dCg" secondAttribute="centerX" id="Cb8-Uo-Ybu"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="4KC-gg-vTw" secondAttribute="bottom" constant="394" id="G2l-jN-VyR"/>
+                            <constraint firstItem="xI5-ph-dCg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="KSX-xP-KmQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4KC-gg-vTw" secondAttribute="trailing" constant="100" id="LRF-lR-a2x"/>
+                            <constraint firstItem="aPS-WO-Da8" firstAttribute="centerX" secondItem="xI5-ph-dCg" secondAttribute="centerX" id="Qpy-Pf-HZU"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xI5-ph-dCg" secondAttribute="trailing" constant="100" id="Tws-nV-jSz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aPS-WO-Da8" secondAttribute="trailing" constant="100" id="a3x-fC-YCm"/>
+                            <constraint firstItem="aPS-WO-Da8" firstAttribute="top" secondItem="xI5-ph-dCg" secondAttribute="bottom" constant="48" id="gCQ-k9-rHK"/>
+                            <constraint firstItem="4KC-gg-vTw" firstAttribute="top" secondItem="aPS-WO-Da8" secondAttribute="bottom" constant="78" id="o9x-YK-t1x"/>
+                            <constraint firstItem="aPS-WO-Da8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="uuc-TK-AtR"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="textField" destination="aPS-WO-Da8" id="CEx-eJ-bPi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="139" y="127"/>
+        </scene>
+        <!--Result View Controller-->
+        <scene sceneID="TvA-jQ-U0d">
+            <objects>
+                <viewController id="JhZ-4M-1lh" customClass="ResultViewController" customModule="SecondKadaiApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nIX-11-OsL">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Qm-aT-9jM">
+                                <rect key="frame" x="184" y="344" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="UrL-We-bsK" kind="unwind" unwindAction="unwind:" id="wJk-AS-hoA"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eYQ-aZ-exG">
+                                <rect key="frame" x="85" y="276" width="243" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="7Qm-aT-9jM" firstAttribute="leading" secondItem="fJX-pP-RKD" secondAttribute="leading" constant="100" id="09e-Rz-iAy"/>
+                            <constraint firstItem="eYQ-aZ-exG" firstAttribute="leading" secondItem="fJX-pP-RKD" secondAttribute="leading" constant="75" id="QtR-2B-aLK"/>
+                            <constraint firstItem="fJX-pP-RKD" firstAttribute="trailing" secondItem="7Qm-aT-9jM" secondAttribute="trailing" constant="100" id="R4t-jL-BQu"/>
+                            <constraint firstItem="fJX-pP-RKD" firstAttribute="trailing" secondItem="eYQ-aZ-exG" secondAttribute="trailing" constant="75" id="TOv-7b-oeV"/>
+                            <constraint firstItem="7Qm-aT-9jM" firstAttribute="top" secondItem="eYQ-aZ-exG" secondAttribute="bottom" constant="41" id="fz7-2N-lS0"/>
+                            <constraint firstItem="eYQ-aZ-exG" firstAttribute="top" secondItem="fJX-pP-RKD" secondAttribute="top" constant="276" id="kBA-pF-zMg"/>
+                            <constraint firstItem="eYQ-aZ-exG" firstAttribute="leading" secondItem="fJX-pP-RKD" secondAttribute="leading" constant="96" id="mp5-Ic-U9c"/>
+                            <constraint firstItem="7Qm-aT-9jM" firstAttribute="centerX" secondItem="nIX-11-OsL" secondAttribute="centerX" id="wYu-5X-Q9q"/>
+                            <constraint firstItem="7Qm-aT-9jM" firstAttribute="leading" secondItem="fJX-pP-RKD" secondAttribute="leading" constant="100" id="zAy-lQ-0q5"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="fJX-pP-RKD"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="PEi-m9-oKM"/>
+                    <connections>
+                        <outlet property="label" destination="eYQ-aZ-exG" id="pZ1-k1-2k2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6fY-Yb-gJm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="UrL-We-bsK" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="824.63768115942037" y="126.5625"/>
         </scene>
     </scenes>
 </document>
